...
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <my.training.core.ui.custom_view.spannable_text_view.SpannableTextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_md"
        android:text="@string/have_you_not_account"
        android:textSize="@dimen/text_size_sm"
        app:layout_constraintEnd_toEndOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

    <my.training.core.ui.custom_view.download_button.DownloadButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_lg"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
