<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tracker_graph">

    <include app:graph="@navigation/tracker_graph" />
    <include app:graph="@navigation/stats_graph" />
    <include app:graph="@navigation/profile_graph" />

</navigation>